Fixed figure line height to prevent overlap.

--- a/sass/elements/_elements.scss
+++ b/sass/elements/_elements.scss
@@ -26,9 +26,4 @@ img {
 
 figure {
 	@include rem(margin, 0 0 $spacing__element-bottom);
-	line-height: 0; // Reset
-    
-    figcaption {
-        line-height: 1; // Caption Fix
-    }
 }
